syntax = "proto3";
package eventbus.v1;

option java_multiple_files = true;
option java_package = "com.salesforce.eventbus.protobuf";
option java_outer_classname = "PubSubProto";

option go_package = "github.com/developerforce/pub-sub-api/go/proto";

message TopicInfo {
  string topic_name = 1;
  string tenant_guid = 2;
  bool can_publish = 3;
  bool can_subscribe = 4;
  string schema_id = 5;
  string rpc_id = 6;
}

message TopicRequest {
  string topic_name = 1;
}

message EventHeader {
  string key = 1;
  bytes value = 2;
}

message ProducerEvent {
  string id = 1;
  string schema_id = 2;
  bytes payload = 3;
  repeated EventHeader headers = 4;
}

message ConsumerEvent {
  ProducerEvent event = 1;
  bytes replay_id = 2;
}

message PublishResult {
  bytes replay_id = 1;
  Error error = 2;
  string correlationKey = 3;
}

message Error {
  ErrorCode code = 1;
  string msg = 2;
}

enum ErrorCode {
  UNKNOWN = 0;
  PUBLISH = 1;
}

enum ReplayPreset {
  LATEST = 0;
  EARLIEST = 1;
  CUSTOM = 2;
}

message FetchRequest {
  string topic_name = 1;
  ReplayPreset replay_preset = 2;
  bytes replay_id = 3;
  int32 num_requested = 4;
  string auth_refresh = 5;
}

message FetchResponse {
  repeated ConsumerEvent events = 1;
  bytes latest_replay_id = 2;
  string rpc_id = 3;
  int32 pending_num_requested = 4;
}

message SchemaRequest {
  string schema_id = 1;
}

message SchemaInfo {
  string schema_json = 1;
  string schema_id = 2;
  string rpc_id = 3;
}

message PublishRequest {
  string topic_name = 1;
  repeated ProducerEvent events = 2;
  string auth_refresh = 3;
}

message PublishResponse {
  repeated PublishResult results = 1;
  string schema_id = 2;
  string rpc_id = 3;
}

service PubSub {
  rpc Subscribe (stream FetchRequest) returns (stream FetchResponse);
  rpc GetSchema (SchemaRequest) returns (SchemaInfo);
  rpc GetTopic (TopicRequest) returns (TopicInfo);
  rpc Publish (PublishRequest) returns (PublishResponse);
  rpc PublishStream (stream PublishRequest) returns (stream PublishResponse);
}